# beellama.cpp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  README.md  SECURITY.md  TASK_PROGRESS.md  VULKAN_BUILD_VERIFICATION.md  convert_hf_to_gguf.py  server-loop-guard.cpp
.devops/: cpu.Dockerfile  cuda.Dockerfile  intel.Dockerfile  rocm.Dockerfile  runtime-intel-server.Dockerfile  vulkan.Dockerfile
.github/actions/save-rolling-ccache/: action.yml
.github/actions/setup-ccache/: action.yml
.github/workflows/: build-openvino.yml  build-webgpu.yml  docker.yml  pr-tests.yml  release-dispatch.yml  release-rescue.yml  release.yml
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  reasoning-budget.cpp  reasoning-budget.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
conversion/: __init__.py
docs/: beellama-args.md  beellama-features.md  build.md  docker.md  enable-and-fix-dflash-on-vulkan-various-models.md  enable-dflash-qwen3-coder-next-on-vulkan.md  quickstart-gemma-4-31b-dflash.md  quickstart-qwen36-dflash.md
docs/backend/: SYCL.md
docs/superpowers/plans/: 2026-07-05-multi-slot-dflash.md  2026-07-09-fix-merge-llama-dflash-regression.md
examples/speculative-simple/: speculative-simple.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h
ggml/src/: ggml-backend-meta.cpp  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-cuda/: CMakeLists.txt  argmax.cu  binbcast.cu  common.cuh  cpy.cu  cross-ring-interleave.cu  fattn-common.cuh  fattn-kvarn.cuh  fattn-mma-f16.cuh  fattn-vec.cuh  fattn.cu  fattn.cuh  fwht.cu  gated_delta_net.cu  getrows.cu  ggml-cuda.cu  kvarn.cu  mmvq.cu  quantize.cu  set-rows.cu  ssm-conv.cu
ggml/src/ggml-cuda/template-instances/: fattn-vec-instance-bf16-turbo2_0.cu  fattn-vec-instance-bf16-turbo2_tcq.cu  fattn-vec-instance-bf16-turbo3_0.cu  fattn-vec-instance-bf16-turbo3_tcq.cu  fattn-vec-instance-bf16-turbo4_0.cu  fattn-vec-instance-f16-turbo2_0.cu  fattn-vec-instance-f16-turbo2_tcq.cu  fattn-vec-instance-f16-turbo3_0.cu  fattn-vec-instance-f16-turbo3_tcq.cu  fattn-vec-instance-f16-turbo4_0.cu  fattn-vec-instance-q4_0-turbo2_0.cu  fattn-vec-instance-q4_0-turbo2_tcq.cu  fattn-vec-instance-q4_0-turbo3_0.cu  fattn-vec-instance-q4_0-turbo3_tcq.cu  fattn-vec-instance-q4_0-turbo4_0.cu  fattn-vec-instance-q4_1-turbo2_0.cu  fattn-vec-instance-q4_1-turbo2_tcq.cu  fattn-vec-instance-q4_1-turbo3_0.cu  fattn-vec-instance-q4_1-turbo3_tcq.cu  fattn-vec-instance-q4_1-turbo4_0.cu  fattn-vec-instance-q5_0-turbo2_0.cu  fattn-vec-instance-q5_0-turbo2_tcq.cu  fattn-vec-instance-q5_0-turbo3_0.cu  fattn-vec-instance-q5_0-turbo3_tcq.cu  fattn-vec-instance-q5_0-turbo4_0.cu  fattn-vec-instance-q5_1-turbo2_0.cu  fattn-vec-instance-q5_1-turbo2_tcq.cu  fattn-vec-instance-q5_1-turbo3_0.cu  fattn-vec-instance-q5_1-turbo3_tcq.cu  fattn-vec-instance-q5_1-turbo4_0.cu  fattn-vec-instance-q6_0-turbo2_0.cu  fattn-vec-instance-q6_0-turbo2_tcq.cu  fattn-vec-instance-q6_0-turbo3_0.cu  fattn-vec-instance-q6_0-turbo3_tcq.cu  fattn-vec-instance-q6_0-turbo4_0.cu  fattn-vec-instance-turbo2_0-bf16.cu  fattn-vec-instance-turbo2_0-f16.cu  fattn-vec-instance-turbo2_0-q4_0.cu  fattn-vec-instance-turbo2_0-q4_1.cu  fattn-vec-instance-turbo2_0-q5_0.cu  (+43 more)
ggml/src/ggml-cuda/vendors/: hip.h
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-ops.cpp  ggml-metal.metal
ggml/src/ggml-musa/: CMakeLists.txt
ggml/src/ggml-sycl/: gated_delta_net.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: kvarn_materialize.comp  kvarn_store.comp  vulkan-shaders-gen.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
include/: llama.h
scripts/: gen-fattn-vec-dispatch.py  verify-windows-package.py  write-release-notes.py
scripts/dflash-regression/: bench_dflash_v0.sh  extract_cli_output.py  measure_acceptance.sh  qwen36_compare.sh  three_way_dflash_diff.sh  verify_corr.sh  verify_slotfix.sh
src/: llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-dsa.cpp  llama-kv-cache-dsa.h  llama-kv-cache-dsv4.cpp  llama-kv-cache-dsv4.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache-kvarn.cpp  llama-kv-cache-kvarn.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-kvarn.cpp  llama-kvarn.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-model-loader.cpp  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampler.cpp
src/models/: delta-net-base.cpp  dflash_draft.cpp  dream.cpp  falcon-h1.cpp  gemma4-iswa.cpp  gemma4.cpp  lfm2.cpp  mimo2.cpp  models.h  qwen35.cpp  qwen35moe.cpp  qwen3next.cpp  step35.cpp
tests/: CMakeLists.txt  test-adaptive-dm.cpp  test-arg-parser.cpp  test-backend-ops.cpp  test-chat.cpp  test-cpu-out-prod.cpp  test-cuda-zero-dim-gemm.cpp  test-dflash-decode.cpp  test-dflash-plumbing.cpp  test-dflash-ring.cpp  test-issue41-regressions-static.py  test-kvarn.cpp  test-llama-archs.cpp  test-mtmd-plumbing.cpp  test-quantize-fns.cpp  test-reasoning-budget.cpp  test-sampling-grammar.cpp  test-server-context.cpp  test-server-loop-guard.cpp  test-server-prompt-checkpoint.cpp  test-turbo-quant.c
tools/cli/: README.md  cli.cpp
tools/llama-bench/: llama-bench.cpp
tools/mtmd/: clip.cpp  clip.h  mtmd-cli.cpp  mtmd-helper.cpp  mtmd-image.cpp  mtmd.cpp  mtmd.h
tools/server/: CMakeLists.txt  README.md  dflash-server-utils.cpp  dflash-server-utils.h  server-adaptive-dm.h  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-task.cpp  server-task.h  server.cpp
tools/server/tests/unit/: test_reasoning_loop_guard.py  test_vision_api.py
